still trying to fix contrast colors for accessibility

--- a/lesson11/css/small.css
+++ b/lesson11/css/small.css
@@ -163,7 +163,7 @@ nav ul li a {
 }
 
 .active {
-    background-color: #3da5d9;
+    background-color: #000;
 }
 
 main {
@@ -716,7 +716,7 @@ body footer p:nth-child(2) {
 }
 
 footer a:visited {
-    color: #010507;
+    color: #000;
 }
 
 footer a:hover {
